minor fixes and video iframe added

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>BootStrap | Angular 4 | Dashboard Theme</title>
+  <title>Bootstrap4 | Angular 4 | Dashboard Theme</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
